--- a/Lesson6_homework_problem1/app/src/main/AndroidManifest.xml
+++ b/Lesson6_homework_problem1/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.anis.lesson5_homework">
+    package="com.anis.lesson6_homework_problem1">
 
     <application
         android:allowBackup="true"
@@ -11,14 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lesson5_homework"
+        android:theme="@style/Theme.Lesson6_homework_problem1"
         tools:targetApi="31">
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ShoppingCategoryActivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
